# acqu

./: CMakeLists.txt  DEADJOE
CaLib/config/: 2015-06.cfg  config_2013_11.cfg  config_2014_05.cfg  config_2015_05.cfg  config_2015_09.cfg
CaLib/database_backups/: 2014-10.05.5.15.root  2014-10_23.4.15-17:24.root  2014-10_29.4.15_00:32.root
CaLib/include/: TCCalib.h  TCCalibEnergy.h  TCCalibTime.h  TCUtils.h
CaLib/macros/: Export.C
CaLib/src/: TCCalibEnergy.cxx  TCCalibTime.cxx  TCUtils.cxx
Tools/: CMakeLists.txt
acqu_user/data.2013.11/: dump_nov13_afterallcalibrations.root  list_broken_diamond.txt  list_broken_moeller.txt  nov13_filelist.txt  nov13_filelist_withcomments.ods  nov13_mainz_filelist_butanol_diamond.txt  nov13_mainz_filelist_butanol_diamond_E.txt  nov13_mainz_filelist_butanol_moeller.txt  nov13_mainz_filelist_carbon_diamond.txt  nov13_mainz_filelist_carbon_moeller.txt  parametersSets.txt  targetpol_2013_11.txt
acqu_user/data.2014.04/: dump_april14_afterallcalibrations.root
acqu_user/data.2014.05/: dump_may14_afterallcalibrations.root  parameter_sets.txt  targetpol_may.txt
acqu_user/data.2015.05/: ge_proton_may2015.ods
acqu_user/data.2015.06/: EnhancementFitted.root  SampleHistograms.C  SampleHistograms_C.d  sampleHisto.root  v2c_1557.plot.ghist  v2c_1557.plot.ghistd
acqu_user/data.2015.09/: Helium.txt  butanol_diamond_450_tneg.txt  butanol_diamond_450_tplus.txt  butanol_diamond_650_tneg.txt  butanol_diamond_650_tplus.txt  butanol_diamond_850_tplus.txt  butanol_moeller_tminus.txt  butanol_moeller_tplus.txt  carbon_withHe.txt  pedestal.txt  (+2 more)
(+48 files in other folders)
